--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mwidiy.github.io/portofolio-2",
+  "homepage": "https://mwidiy.github.io/Portofolio-2",
   "name": "y",
   "private": true,
   "version": "0.0.0",
